Ajout du controle de code source

--- a/PoC_MongoDB/PoC_MongoDB/index.html
+++ b/PoC_MongoDB/PoC_MongoDB/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Contact V5</title>
@@ -92,6 +92,7 @@
 							</label>
 						</div>
 					</div>
+
 
 					<div class="wrap-contact100-form-range">
 						<span class="label-input100">Budget *</span>
